assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,300;1,500&family=Tangerine:wght@400;700&display=swap');



html {
    scroll-behavior: smooth;
}

body {
    background-color: #1c2135;
}

.row {
    margin: 0;
    padding: 0;
    display: flex;
}

/*--media--*/

@media (max-width: 576px) { 

    html {
        width: 100vw;
        height: 100vh;
    }

    .sticky {
        position: sticky;
    }

    .row {
        margin: 0;
        padding: 0;
    }
    
    .navbar-expand-sm {
        flex-direction: column;
        align-content: center;
    }

    .navbar-toggler {
        border: 1px;
        font-weight: bold;
        border-color: #5a6794;
        align-content: center;
    }
   
    
    .navbar-toggler-icone {
        color: #5a6794;
        font-weight: bold;
        border-color: #5a6794;
        text-align: center;
    }

    

    .form-group {
        padding-left: 20px;
        padding-right: 20px;    
    }
  

    .d-project, .e-project, .f-project {
        display: none;
    }

    .phone, .social-links {
        display: block;
    }

  
}

.align-bottom {
    align-content: bottom;
}


/*header style*/

#header {
    height: 70px;
    background-color: #1c2135;
}

.sticky {
        position: sticky;
}

/*--that is supposed to stop overflow--*/




/* the text styled*/

.brand-logo, .brand-story, .brand-potfolio, .brand-contact {
    color: #5a6794;
    font-size: 60px;
    font-family: "Tangerine", cursive;
    font-weight: 700;
    text-align: center;
    margin-top: 10px;
}


/*the block of text that counts as story */
.story-text  {
    font-size: 20px;
    color: #5a6794;
    margin: 50px 50px 0 50px;
}


/*the list in header - story, portfolio, resume and social links in the bottom*/

.navbar {
    position: sticky;
}

.nav-item {
    color: #e7e9ee;
}


.navbar-list ul li {
    font-size: 20px;
    margin-right: 30px;
}


/* block-divider*/

.block-divider {
    width: 300px;
    height: 3px;
    border: 0;
    background-color: #5a6794;
}

.third-divider {
    margin-bottom: 40px;
    margin-top: -25px;
}

/*borrowed navbar css from a bootstrap site that was made on a course*/


#navbarNavDropdown {
    margin-left: 400px;
    margin-top: 35px;
    color: #e7e9ee;
}

/*the middle part style*/

#story {
    height: 100vh;
    width: 100vw;
    margin-top: 100px;
}

/*card style*/

.card-row {
    margin-left: 25px;
    margin-right: 25px;
}


.a-card, .b-card, .c-card, .d-card, .e-card, .f-card {
    border-color: #5a6794;
    background-color: #e7e9ee;
    color: #1c2135;
    box-shadow: 5px 5px 5px #5a6794;
    margin-top: 50px;
    height: 200px;
}



/*the image*/

.round-image {
    box-shadow: 3px 3px 3px #e7e9ee;
    height: 170px;
    width: 160px;

}

/*--portfolio bit--*/

#portfolio {
    background-color: #1c2135;
    color: #e7e9ee;
    height: 120vh;
    width: 100vw;
    padding-right: 25px;
}


/*--contact form bit--*/

#contact-form {
    height: 100vh;
    width: 100vw;
}

.form-group {
    margin-left: auto;
    margin-right: auto;
    color: #5a6794;
}

.form-row {
    text-align: center;
}


.submit-btn {
    background-color: #5a6794;
    color: #e7e9ee;
    margin-top: 20px;
}


/*--footer style--*/



#footer {
    height: 100px;
    margin-top: 100px;
}


.phone {
    color:   #e7e9ee;
    text-align: right;
}

.social-links {
    margin-bottom: 0;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 12px;
    border-radius: 50%;
    font-size: 13px;
    line-height: 7px;
    text-align: center;
    color: #e7e9ee;
    background: #5a6794;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

